[metadata]
name = flipper-raw-rfid
version = attr: flipper_raw_rfid.__version__
description = A library for reading and analyzing Flipper Zero raw RFID files
author = Johannes Künsebeck
author_email = kuensebeck@googlemail.com
url = https://github.com/hnesk/flipper-raw-rfid
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    flipper-zero
    flipper
    RFID
license = MIT License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
python_requires = >=3.8
install_requires = file:requirements.txt
setup_requires =
    wheel
packages = find:

include_package_data = True

[options.packages.find]
include =
    flipper_raw_rfid*


[options.entry_points]
console_scripts =
    flipper-raw-rfid = flipper_raw_rfid.cli:main


[flake8]
ignore=E501

[mypy]
warn_return_any = True
warn_unused_configs = True
warn_unreachable = True
warn_redundant_casts = True
warn_unused_ignores = True
implicit_reexport = False
disallow_any_generics = True
strict_optional = False
disallow_untyped_defs = True
plugins = numpy.typing.mypy_plugin

[mypy-scipy]
ignore_missing_imports = True


[codespell]
skip = ./venv*,.mypy_cache,build,.git
count =
quiet-level = 3